--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/ -->
-        Designed by <a href="https://balameb-media.com/">Balameb Medina</a> power by <a href="https://getkor.io/">KOR</a>
+        Designed by <a href="https://balamebmedia.com/">Balameb Medina</a> power by <a href="https://getkor.io/">KOR</a>
       </div>
     </div>
   </footer><!-- End Footer -->
