actualizacion de texto

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <div class="section-title">
           <h2>¿Por que escoger <span>The Best of Bobby?</span></h2></br>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>Lo más importante en nuestro restaurante son los mariscos, y en nuestra carta podrás encontrar entrantes y primeros platos y para picar.</p>
         </div>
 
         <div class="row">
@@ -221,7 +221,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
 
             <div class="content">
-              <h3>Eum ipsam laborum <span> text test </span> <strong><span>velit pariatur architecto aut nihil</span></strong></h3></br> 
+              <h3><span></span> <strong><span>The Best of Bobby</span></strong></h3></br> 
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
               </p>
@@ -958,7 +958,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <br/><h1>The Best of Bobby</h1><br/>
+      <h3>The Best Of Bobby</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -968,14 +968,14 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>The best of Bobby</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span> The Best Of Bobby </span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/ -->
-        Designed by <a href="https://balamebmedia.com/">Balameb Medina</a> power by <a href="https://getkor.io/">KOR</a>
+        Designed by <a href="https://balamebmedia.com/"><span><strong> Balameb Media  </strong></span></a> power by <a href="https://getkor.io/"><span><strong> KOR </strong></span></a>
       </div>
     </div>
   </footer><!-- End Footer -->
