pagina actualizada y fotos de premios

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center justify-content-lg-start">
-      <i class="bi bi-phone d-flex align-items-center"><span>+502 0000 0000</span></i>
-      <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Lunes - Domingo: 11:00 AM - 23:00 PM</span></i>
+      <i class="bi bi-phone d-flex align-items-center"><span>+502 2335 4298</span></i>
+      <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Lunes - Domingo: 11:00 AM - 21:00 PM</span></i>
     </div>
   </section>
 
@@ -259,29 +259,34 @@
 
         <div class="row">
 
+          <div class="col-lg-4 mt-4 mt-lg-0">
+            <div class="box">
+              <span>2014</span>
+              <h4> Primera Participación</h4>
+              <div class="pic"><img src="assets/img/premios/02014.jpeg" class="img-fluid" alt=""></div><br/>
+              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+            </div>
+          </div>
+
           <div class="col-lg-4">
             <div class="box">
-              <span>01</span>
-              <h4>Lorem Ipsum</h4>
+              <span>2017</span>
+              <h4>Primer Lugar</h4>
+              <div class="pic"><img src="assets/img/premios/12017.jpeg" class="img-fluid" alt=""></div><br/>
               <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box">
-              <span>02</span>
-              <h4>Repellat Nihil</h4>
+              <span>2019</span>
+              <h4>Tercer Lugar</h4>
+              <div class="pic"><img src="assets/img/premios/32019.jpeg" class="img-fluid" alt=""></div><br/>
               <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
             </div>
           </div>
 
-          <div class="col-lg-4 mt-4 mt-lg-0">
-            <div class="box">
-              <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
-            </div>
-          </div>
+         
 
         </div>
 
@@ -500,7 +505,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Organize Your <span>Events</span> in our Restaurant</h2>
+          <h2>Organiza tus eventos en <span>The Best of Bobby</span></h2>
         </div>
 
         <div class="events-slider swiper-container">
@@ -650,7 +655,7 @@
       <div class="container-fluid">
 
         <div class="section-title">
-          <h2>Some photos from <span>Our Restaurant</span></h2>
+          <h2>Imagenes de <span>Nuestro Restaurante</span></h2>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
@@ -888,8 +893,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2><span>Contact</span> Us</h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <h2><span>Sera un placer</span> que te comuniques</h2>
+          <p>Contamos con amplio parqueo, seguridad y un ambiente agradable, estamos ubicados en un área natural, rodeados de árboles y aire puro.</p>
         </div>
       </div>
 
@@ -903,26 +908,26 @@
           <div class="row">
             <div class="col-lg-3 col-md-6 info">
               <i class="bi bi-geo-alt"></i>
-              <h4>Location:</h4>
-              <p>A108 Adam Street<br>New York, NY 535022</p>
+              <h4>Ubicación:</h4>
+              <p>27 calle 39-45 Zona 5<br>Guatemala, Guatemala</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="bi bi-clock"></i>
-              <h4>Open Hours:</h4>
-              <p>Monday-Saturday:<br>11:00 AM - 2300 PM</p>
+              <h4>Horas de atención:</h4>
+              <p>Lunes - Domingo:<br>11:00 AM - 21:00 PM</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="bi bi-envelope"></i>
-              <h4>Email:</h4>
-              <p>info@example.com<br>contact@example.com</p>
+              <h4>Correo:</h4>
+              <p>thebestofbobbygt@gmail.com<br></p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="bi bi-phone"></i>
-              <h4>Call:</h4>
-              <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+              <h4>Teléfono:</h4>
+              <p>+502 2335 4298<br></p>
             </div>
           </div>
         </div>
@@ -930,24 +935,34 @@
         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
           <div class="row">
             <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+              <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
             </div>
             <div class="col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+              <input type="email" class="form-control" name="email" id="email" placeholder="Correo" required>
+            </div>
+          </div><br/>
+          <div class="row">
+            <div class="col-md-6 form-group">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Tema" required>
+            </div>
+            <div class="col-md-6 form-group mt-3 mt-md-0">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Teléfono" required>
             </div>
           </div>
-          <div class="form-group mt-3">
+
+          <!--<div class="form-group mt-3">
             <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-          </div>
+          </div> -->
+          
           <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+            <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
           </div>
           <div class="my-3">
             <div class="loading">Loading</div>
             <div class="error-message"></div>
             <div class="sent-message">Your message has been sent. Thank you!</div>
           </div>
-          <div class="text-center"><button type="submit">Send Message</button></div>
+          <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
         </form>
 
       </div>
@@ -958,14 +973,14 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>The Best Of Bobby</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>The Best of Bobby</h3>
+      <p>Nuestra especialidad son mariscos, pero también contamos con diferentes platillos a su elección.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <!--<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span> The Best Of Bobby </span></strong>. All Rights Reserved
