actualizacion de menu

--- a/menu.html
+++ b/menu.html
@@ -113,7 +113,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Check our tasty <span>Menu</span></h2>
+          <h2>Diferentes opciones <span>para todos</span></h2>
         </div>
 
         <div class="row">
@@ -121,9 +121,10 @@
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Todos nuestros platos</li>
               <li data-filter=".filter-starters">Entradas</li>
-              <li data-filter=".filter-salads">Mariscos en ceviche</li>
+              <li data-filter=".filter-seafood">Ceviches</li>
+              <li data-filter=".filter-caldos">Caldos</li>
               <li data-filter=".filter-specialty">Platos Fuertes</li>
-              <li data-filter=".filter-specialty">Bebidas</li>
+              <li data-filter=".filter-bebidas">Bebidas</li>
             </ul>            
           </div>
         </div>
@@ -133,92 +134,192 @@
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/callitos.JPG" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>$5.95</span>
+              <a href="#">Callitos</a><span>Q. 20.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Bread barrel</a><span>$6.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Guatitas (o callitos) a la madrileña.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/yuca-frita.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>$7.95</span>
+              <a href="#">Yuca Frita con Ajo</a><span>Q. 20.00</span>
             </div>
             <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>$8.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>$9.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+              Trozos largos y  cuece a fuego lento hasta dar el toque perfecto al paladar.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/bolas-yuca.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>$4.95</span>
+              <a href="#">Bolas de Yuca</a><span>Q. 20.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Bolitas de yuca frita o al horno rellenas de queso.
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-seafood">
+            <img src="assets/img/menu/ceviche-camaron.JPG" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Greek Salad</a><span>$9.95</span>
+              <a href="#">Ceviche de Camarón</a><span>Q. 100.00</span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
+              Camarones frescos, enteros, pelados, y preparados con cebolla morada y jitomate picado
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-seafood">
+            <img src="assets/img/menu/ceviche-vuelvealavida.JPG" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>$9.95</span>
+              <a href="#">Ceviche vuelve a la vida</a><span>Q. 100.00</span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+              coctel de mariscos que incluye FILETE DE PESCADO , pulpo, ostiones, pulpa de jaiba, calamares, caracoles, ostiones y CAMARONES .
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-seafood">
+            <img src="assets/img/menu/ceviche-peruano.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Ceviche Peruano</a><span>Q. 100.00</span>
+            </div>
+            <div class="menu-ingredients">
+              El tradicional cebiche peruano con pescado fresco, limones, cebollas, ajíes picantes, y cilantro fresco.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-caldos">
+            <img src="assets/img/menu/tapado.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Tapado</a><span>Q. 165.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Una de nuestras especialidades de la casa, una de nuestras mejores recomendaciones.
+            </div>
+          </div> 
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/lomito.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Lomito</a><span>Q. 95.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Guarniciones: Papas Fritas, Yuca frita, Arroz blanco, Rice&Beans, Ensalada.
+            </div>
+          </div>                           
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/puyazo.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Puyazo</a><span>Q. 80.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Guarniciones: Papas Fritas, Yuca frita, Arroz blanco, Rice&Beans, Ensalada.
+            </div>
+          </div>          
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/mojarra.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Mojarra Frita</a><span>Q. 80.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Guarniciones: Papas Fritas, Yuca frita, Arroz blanco, Rice&Beans, Ensalada.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/marytierra.JPG" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Roll</a><span>$12.95</span>
+              <a href="#">Mar y Tierra (Lomito)</a><span>Q. 115.00</span>
             </div>
             <div class="menu-ingredients">
-              Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+              Guarniciones: Papas Fritas, Yuca frita, Arroz blanco, Rice&Beans, Ensalada.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/camaronesalajillo.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Camarones Empanizados o Al Ajillo</a><span>Q. 175.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Guarniciones: Papas Fritas, Yuca frita, Arroz blanco, Rice&Beans, Ensalada.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/polloalaplancha.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Pollo (a la Plancha / Frito)</a><span>Q. 60.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Guarniciones: Papas Fritas, Yuca frita, Arroz blanco, Rice&Beans, Ensalada.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <img src="assets/img/menu/gaseosas.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Gaseosa</a><span>Q. 15.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Consulta por nuestras diferentes opciones.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <img src="assets/img/menu/aguapura.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Agua Pura</a><span>Q. 12.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Consulta si la prefieres al tiempo o fria.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <img src="assets/img/menu/cerveza.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Cerveza</a><span>Q. 20.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Consulta por nuestras diferentes opciones.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <img src="assets/img/menu/cervezaextranjera.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Cerveza Extranjera</a><span>Q. 28.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Consulta por nuestras diferentes opciones.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <img src="assets/img/menu/cubetazo.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Cubetazo</a><span>Q. 100.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Consulta por nuestras diferentes opciones, nuestros cubetazos son de 6 cervezas.
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-bebidas">
+            <img src="assets/img/menu/cubetazoextranjera.JPG" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Cubetazo Extranjera</a><span>Q. 120.00</span>
+            </div>
+            <div class="menu-ingredients">
+              Consulta por nuestras diferentes opciones, nuestros cubetazos son de 6 cervezas.
             </div>
           </div>
 
@@ -227,8 +328,102 @@
       </div>
     </section><!-- End Menu Section -->
 
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials">
+      <div class="container position-relative">
+
+        <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3>Saul Goodman</h3>
+                <h4>Ceo &amp; Founder</h4>
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <h3>Sara Wilsson</h3>
+                <h4>Designer</h4>
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <h3>Jena Karlis</h3>
+                <h4>Store Owner</h4>
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <h3>Matt Brandon</h3>
+                <h4>Freelancer</h4>
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                <h3>John Larson</h3>
+                <h4>Entrepreneur</h4>
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Testimonials Section -->
+
     <!-- ======= Specials Section ======= -->
-    <section id="specials" class="specials">
+    <!--<section id="specials" class="specials">
       <div class="container">
 
         <div class="section-title">
@@ -323,10 +518,10 @@
         </div>
 
       </div>
-    </section><!-- End Specials Section -->
+    </section>--> <!-- End Specials Section -->
 
     <!-- ======= Chefs Section ======= -->
-    <section id="chefs" class="chefs">
+    <!--<section id="chefs" class="chefs">
       <div class="container">
 
         <div class="section-title">
@@ -387,7 +582,7 @@
         </div>
 
       </div>
-    </section><!-- End Chefs Section -->
+    </section> --><!-- End Chefs Section -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
